[package]
name = "compress-image"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19.0"
tokio-stream = "0.1"