[package]
name = "youtube-to-mp3"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
chrono = "0.4"
youtube_dl = "0.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
yup-oauth2 = "10.0.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
rustls = "0.23.10"
once_cell = "1.19.0"